# Tiago_Object_Manipulation_ROS

./: LICENSE  README.md  room.world
room/: submap_0.pgm
tiago_task/: CMakeLists.txt  package.xml
tiago_task/launch/: task.launch  tiago_mapping.launch  tiago_navigation.launch
tiago_task/msg/: MarkerPosition.msg
tiago_task/scripts/: send_goal.py  send_nav_goal.py  test_msg.py  vision.py
tiago_task/worlds/: model.sdf  room.world
